[workspace]
members = [
    "nginx-sys",
    "examples",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/nginxinc/ngx-rust"
repository = "https://github.com/nginxinc/ngx-rust"
rust-version = "1.79.0"

[package]
name = "ngx"
version = "0.5.0"
autoexamples = false
categories = ["api-bindings", "network-programming"]
description = "FFI bindings to NGINX"
keywords = ["nginx", "module", "sys"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-task = { version = "4.7.1", optional = true }
bytes = { version = "1.8.0", optional = true }
errno = "0.3.9"
flume = { version = "0.11.0", optional = true }
foreign-types = "0.5.0"
http-body = { version = "1.0.1", optional = true }
libc = "0.2.165"
nginx-sys = { path = "nginx-sys", version = "0.5.0"}
pin-project-lite = { version = "0.2.15", optional = true }

[features]
default = ["async", "vendored"]
async = [
    "dep:async-task",
    "dep:bytes",
    "dep:flume",
    "dep:http-body",
    "dep:pin-project-lite",
]
# Build our own copy of the NGINX by default.
# This could be disabled with `--no-default-features` to minimize the dependency tree
# when building against an existing copy of the NGINX with the NGX_OBJS variable.
vendored = ["nginx-sys/vendored"]

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
target-triple = "0.1.2"
